--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10747311.md#1" target="_blank">裴毅然：中共抗战“游而不击”的史证（一）</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/4/19/n2881569.md#1" target="_blank">【新纪元周刊】揭开活摘器官黑幕</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10004659.md#1" target="_blank">共产暴政录：批判武训，拒绝特蕾莎修女</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/22/n3688691.md#1" target="_blank">不再对强盗说“谢谢”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
