--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/26/n11004578.md#1" target="_blank">林辉：宁跳珠江也不批孔子的金石界大家</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/26/n4648466.md#1" target="_blank">在法轮大法中修炼重生的宁德人（二）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/1/n11559430.md#1" target="_blank">林辉： 中共70年来的成功与未遂政变</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/27/n7938314.md#1" target="_blank">摆脱10多年严重湿疹的折磨</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
