--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,8 +25,18 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>美国周日新增48210例Covid-19病例</h3>
+<p>根据约翰-霍普金斯大学的数据，美国周日共诊断出48210例新的Covid-19病例，同时还报告新增388例与该病毒相关的死亡病例。</p>
+<p>根据该大学的统计，自疫情爆发以来，目前全美至少有8,154,594个感染Covid-19病例，以及至少有219,674人死亡。</p>
+<p>此总数包括来自49个州、哥伦比亚特区和其他美国领土的病例，以及撤侨的病例。</p>
+<h3>新病例持续上升 意大利总理宣布进一步防疫限制</h3>
+<p>意大利总理朱塞佩·孔特（Giuseppe Conte）周日宣布，在连续第五天每日的中共病毒病例上升之后，该国进一步加强了限制措施。</p>
+<p>餐馆每桌只允许为6人服务；下午6点以后，只允许提供餐桌服务。赌博场所必须在晚上9点关闭，当地的节日也被禁止。</p>
+<p>健身房和游泳池可以继续开放，但孔特警告说，如果它们在下周之前不遵守安全协议，它们将被关闭。</p>
+<p>孔戴说：“这些措施旨在避免再次封锁。国家不能再面临另一次封锁，这将损害国家的经济结构。”</p>
+<p>他说，晚上9点以后，将允许市长在公共区域实施宵禁。</p>
 <h3>马来西亚的Covid-19新病例创单日新高</h3>
-<p>据大马官方的Bernama 通讯社报导，马来西亚周日录得有871例新的感染Covid-19病毒的病例。这是该国疫情爆发以来录得的单日最高的病例数。</p>
+<p>据大马官方的Bernama通讯社报导，马来西亚周日录得有871例新的感染Covid-19病毒的病例。这是该国疫情爆发以来录得的单日最高的病例数。</p>
 <p>根据约翰-霍普金斯大学的数据，马来西亚迄今已录得20,498例感染Covid-19的病例和187人死亡。</p>
 <p>据Bernama 通讯社报导，马来西亚卫生总局局长努尔·希瑟姆（Noor Hisham）说，大多数病例都是在婆罗洲东北部的沙巴州录得的。</p>
 <p>上周二，马来西亚部分地区，包括沙巴州和首都吉隆坡，被置于有条件行动管制令之下，该令禁止婚礼和体育赛事等活动。此外，还禁止出于非工作目的的跨地区旅行。</p>
@@ -141,7 +151,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/17/n11118849.md#1" target="_blank">严家伟：极权专制对中国新闻界的一次严厉打压</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/30/n10679081.md#1" target="_blank">《求救信》获墨西哥电影节纪录片评委大奖</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/19/n10229517.md#1" target="_blank">中共淫乱的前生今世（3）政治局六淫棍</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/9/n11780113.md#1" target="_blank">德国修炼者读《转法轮》见证神奇 受益良多</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
